[workspace]
resolver = "2"
members = ["crates/*"]
exclude = [
    "zk-solana-metrics-2.1.0",
]

[workspace.package]
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/LiteSVM/litesvm"
rust-version = "1.75.0"

[workspace.dependencies]
bincode = "1.3"
criterion = "0.5"
ed25519-dalek = "1.0.1"
indexmap = "2.6"
itertools = "0.13"
libsecp256k1 = "0.6.0"
litesvm = { path = "crates/litesvm", version = "0.4" }
log = "0.4"
serde = "1.0"
smallvec = "1.13"
solana-address-lookup-table-program = "=2.1.0"
solana-bpf-loader-program = {path = "zk-solana-bpf-loader-program-2.1.0", version = "2.1.0" }
solana-compute-budget = "=2.1.0"
solana-compute-budget-program = "=2.1.0"
solana-config-program = "=2.1.0"
solana-fee = "=2.1.0"
solana-loader-v4-program = "=2.1.0"
solana-log-collector = "=2.1.0"
solana-program = { path = "zk-solana-bpf-loader-program-2.1.0/solana-program-runtime/solana-sdk/solana-program", version = "2.1.0" }
solana-program-runtime = { path = "zk-solana-bpf-loader-program-2.1.0/solana-program-runtime", version = "2.1.0" }
# solana-program-test = "=2.1.0"
solana-runtime-transaction = "=2.1.0"
solana-sdk = { path = "zk-solana-bpf-loader-program-2.1.0/solana-program-runtime/solana-sdk", version = "2.1.0" }
solana-stake-program = "=2.1.0"
solana-svm = "=2.1.0"
solana-svm-transaction = "=2.1.0"
solana-system-program = "=2.1.0"
solana-timings = "=2.1.0"
solana-vote-program = "=2.1.0"
spl-associated-token-account-client = "2.0"
spl-token = "7.0.0"
spl-token-2022 = "6.0.0"
test-log = "0.2"
thiserror = "2.0"
tokio = "1.35"

[profile.bench]
debug = true

[profile.release]
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.lints.clippy]
result_large_err = "allow"

[patch.crates-io]
ahash = { path = "zk-ahash" }
ring = { path = "ring" }
getrandom = { path = "zk-getrandom" }
rand_core = { path = "zk-rand/rand_core" }
solana-bpf-loader-program = {path = "zk-solana-bpf-loader-program-2.1.0", version = "2.1.0" }
solana-program-runtime = { path = "zk-solana-bpf-loader-program-2.1.0/solana-program-runtime", version = "2.1.0" }
solana-metrics = { path = "zk-solana-bpf-loader-program-2.1.0/solana-program-runtime/solana-metrics", version = "2.1.0" }
solana-measure = { path = "zk-solana-bpf-loader-program-2.1.0/solana-program-runtime/solana-measure", version = "2.1.0" }
solana-sdk = { path = "zk-solana-bpf-loader-program-2.1.0/solana-program-runtime/solana-sdk", version = "2.1.0" }
solana-program = { path = "zk-solana-bpf-loader-program-2.1.0/solana-program-runtime/solana-sdk/solana-program", version = "2.1.0" }
solana-account-info = { path = "zk-solana-bpf-loader-program-2.1.0/solana-program-runtime/solana-sdk/solana-program/solana-account-info", version = "2.1.0" }
solana-stable-layout = { path = "zk-solana-bpf-loader-program-2.1.0/solana-program-runtime/solana-sdk/solana-program/solana-stable-layout", version = "2.1.0" }